--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Assets\Scripts\SwordSwing.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\CamFollow.cs" />
+    <Compile Include="Assets\Scripts\Boss2Port.cs" />
+    <Compile Include="Assets\Scripts\BlockPush.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
