--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,11 +56,13 @@
     <Compile Include="Assets\Scripts\DisableShock.cs" />
     <Compile Include="Assets\Scripts\BossSword.cs" />
     <Compile Include="Assets\Scripts\EnemyBehavior.cs" />
+    <Compile Include="Assets\Scripts\BarrierLift.cs" />
     <Compile Include="Assets\Scripts\EventManager.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\BlockPush.cs" />
     <Compile Include="Assets\Scripts\CamFollow.cs" />
-    <Compile Include="Assets\Scripts\BarrierLift.cs" />
+    <Compile Include="Assets\Scripts\SwitchOn.cs" />
+    <Compile Include="Assets\Scripts\ChaseBlock.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
