--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Assets\Scripts\BlockRotate.cs" />
     <Compile Include="Assets\Scripts\CamFollow.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
+    <Compile Include="Assets\Scripts\KeyToButtonClick.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
